ajuste espaço elementos navbar

--- a/assets/CSS/componets/header.css
+++ b/assets/CSS/componets/header.css
@@ -26,7 +26,7 @@
 /* links secundario*/
 .linkSecundary {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
