feito: ajustes finais

--- a/assets/CSS/componets/programas.css
+++ b/assets/CSS/componets/programas.css
@@ -1,6 +1,9 @@
+.herderTraining__title  {
+  padding-bottom: 2rem;
+}
 
 .cards {
-  width: 162rem;
+  width: 100%;
   margin: 2rem;
   display: flex;
   align-items: center;
