--- a/assets/CSS/componets/header.css
+++ b/assets/CSS/componets/header.css
@@ -173,7 +173,7 @@
 }
 
 .linkSecundary-button-login a {
-  text-decoration: nome;
+  text-decoration: none;
   font-size: 1.7rem;
   color: var(--color-primary);
   cursor: pointer;
